# cite-otter

./: .gitignore  .rumdl.toml  AUTHORS  CHANGELOG.md  Cargo.toml  README.md  REFERENCE.md  ROADMAP.md  cliff.toml  justfile  lychee.toml  typos.toml
branding/: colors.css  macot.txt
docs/cite-otter/: README.md  ROADMAP.md
docs/migration/: REFERENCE.md
docs/reference/: RELEASE.md
docs/reference/ai/: POST-CHANGES.md  README.md
docs/reference/tools/: hyperfine.md
scripts/: benchmark_ruby_parity.sh  benchmark_rust_baseline.sh  build_normalization_any.sh  compare_ruby_format.sh  generate_ruby_format_fixtures.rb  post-change.sh  sync_normalization_any.sh
src/: cli.rs  dictionary.rs  document.rs  feature.rs  finder.rs  format.rs  language.rs  lib.rs  main.rs  model.rs  normalizer.rs  parser.rs  sequence_model.rs
src/parser/: core.rs  extract.rs  field_tokens.rs  mod.rs  types.rs
src/parser/extract/: tagging.rs  tokenize.rs
tests/: dictionary_backends.rs  reference_dictionary.rs  reference_dictionary_adapters.rs  reference_document.rs  reference_feature.rs  reference_finder.rs  reference_format.rs  reference_language.rs  reference_normalizer.rs  reference_parser.rs  reference_ruby_format_parity.rs  reference_training.rs
tests/fixtures/: abbrev-sample.txt  container-abbrev-sample.txt  dictionary-sample.txt
tests/fixtures/format/: bibtex.txt  core-bibtex.txt  core-csl.txt  core-refs.txt  csl.txt  refs.txt
tests/fixtures/normalization-any/: container-abbrev.txt  language-locale.txt  publisher-abbrev.txt  script-locale.txt
tests/support/: mod.rs
(+6 files in other folders)
