[package]
edition = "2024"
name    = "cite-otter"
version = "0.5.0"

[dependencies]
anyhow = "1.0"
clap = { features = [
  "derive",
], version = "4.3" }
glob = "0.3"
lmdb = "0.8"
whatlang = "0.18"
unicode-script = "0.5"
redis = "0.27"
serde = { features = [
  "derive",
], version = "1.0" }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
