[package]
edition = "2024"
name    = "cite-otter"
version = "0.5.0"

[dependencies]
anyhow = "1.0"
clap = { features = [
  "derive",
], version = "4.3" }
flate2 = "1.0"
glob = "0.3"
gnudbm = { optional = true, version = "0.2", features = ["system-gdbm"] }
lmdb = "0.8"
redis = "0.27"
serde = { features = [
  "derive",
], version = "1.0" }
serde_json = "1.0"
unicode-script = "0.5"
whatlang = "0.18"

[features]
default = [  ]
gdbm    = [ "gnudbm" ]

[dev-dependencies]
tempfile = "3.10"
